--- a/YouTube Music/index.html
+++ b/YouTube Music/index.html
@@ -92,12 +92,12 @@
                     <div id="item1_3">Valentino <br> 노래 • 24KGoldn </div>
                 </div>
                 <div class="item1_items4">
-                    <img src="https://image.bugsm.co.kr/album/images/500/8448/844862.jpg" width="180">
-                    <div id="item1_4">Valentino <br> 노래 • 24KGoldn </div>
+                    <img src="https://image.bugsm.co.kr/album/images/1000/203438/20343878.jpg" width="180">
+                    <div id="item1_4">Believe(피처링: Crush) <br> 노래 • Paul Blanco </div>
                 </div>
                 <div class="item1_items5">
-                    <img src="https://image.bugsm.co.kr/album/images/500/8448/844862.jpg" width="180">
-                    <div id="item1_5">Valentino <br> 노래 • 24KGoldn </div>
+                    <img src="https://image.bugsm.co.kr/album/images/1000/9612/961254.jpg" width="180">
+                    <div id="item1_5">Telepathy <br> 노래 • 래원 </div>
                 </div>
                 <!--본문 두번째 요소-->
                 <div class="item2">
@@ -105,24 +105,24 @@
                     <span> 오후에 어울리는 음악</span>
                 </div>
                 <div class ="item2_items1">
-                    <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyMDA2MDFfMTE2%2FMDAxNTkxMDAwNzkwNDg3.XRo1wA2H_pd4jpbdHLLCzVqiigs0gZsT4Bgo97_H0_Mg.wJNbK4cQJgNUt-7GonQa-tBz6b5QUvdgqukEXdOY_mMg.JPEG.tkdgns3125%2Fghetoo_kids.jpg&type=a340" width="180">
-                    <div id="item2_1">사이렌 <br> 노래 • 호미들 </div>
+                    <img src="https://image.bugsm.co.kr/album/images/1000/9620/962052.jpg" width="180">
+                    <div id="item2_1">러브미 (love me) (feat.Hoody)<br> 노래 • 나플라(Nafla) </div>
                 </div>
                 <div class="item2_items2">
-                    <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fimgnews.naver.net%2Fimage%2F5575%2F2021%2F03%2F31%2F0000187553_002_20210331094631839.jpg&type=sc960_832" width="180">
-                    <div id="item2_2">Peaches<br> Caesar, Giveon) <br> 노래 • Justin Bieber</div>
+                    <img src="https://image.bugsm.co.kr/album/images/1000/202756/20275657.jpg" width="180">
+                    <div id="item2_2">LIT RED <br> 노래 • Viceversa</div>
                 </div>
                 <div class="item2_items3">
-                    <img src="https://image.bugsm.co.kr/album/images/500/8448/844862.jpg" width="180">
-                    <div id="item2_3">Valentino <br> 노래 • 24KGoldn </div>
+                    <img src="https://image.bugsm.co.kr/album/images/1000/202704/20270476.jpg" width="180">
+                    <div id="item2_3">낙하산<br> 노래 • 빈첸(VINXEN) </div>
                 </div>
                 <div class="item2_items4">
-                    <img src="https://image.bugsm.co.kr/album/images/500/8448/844862.jpg" width="180">
-                    <div id="item2_4">Valentino <br> 노래 • 24KGoldn </div>
+                    <img src="https://image.bugsm.co.kr/album/images/1000/203633/20363300.jpg" width="180">
+                    <div id="item2_4">Encourage(피처링:10cm(십센치)) <br> 노래 • sogumm </div>
                 </div>
                 <div class="item2_items5">
-                    <img src="https://image.bugsm.co.kr/album/images/500/8448/844862.jpg" width="180">
-                    <div id="item2_5">Valentino <br> 노래 • 24KGoldn </div>
+                    <img src="https://image.bugsm.co.kr/album/images/1000/40189/4018981.jpg" width="180">
+                    <div id="item2_5">넌 내게 안될거란 말을 했지만(prod.Kidstone) <br> 노래 • 호미들 </div>
                 </div>
                 <!--본문 3번째 요소-->
                 <div class="item3">
@@ -174,7 +174,7 @@
     </section>
     <footer>
         <div class="play-box">
-            dddd
+        
         </div>
     </footer>
 </body>
